--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "isitbusy",
   "version": "0.0.1",
+  "engines": {
+    "node": "^12.15.0",
+    "npm": "^6.2.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
