--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "got": "^11.8.2",
-    "jsonpath": "^1.1.1"
+    "jsonpath": "^1.1.1",
+    "moment-timezone": "^0.5.33"
   }
 }
