--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "got": "^11.8.2",
     "jsonpath": "^1.1.1",
-    "moment-timezone": "^0.5.33"
+    "moment-timezone": "^0.5.33",
+    "redis": "^3.1.2"
   }
 }
